--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -68,50 +68,67 @@
   &__inputs {
       // background-color: skyblue;
       display: grid;
-      grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 27px);
       grid-template-columns: repeat(4, 1fr);
+
+        grid-row-gap: 120px;
+        margin-top: 66px;
+        margin-left: 83px;
+        margin-right: 83px;
 
       justify-items: center;
       align-items: center;
   }
-}
+  
 
-.input {
-  display: grid;
-  // grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
+  font-family: 'Montserrat';
+  text-align: center;
+    grid-column-gap: 8px;
 
-    font-family: 'Montserrat';
-    text-align: center;
+    height: 47px;
 
   &__title {
       grid-column: input-s/input-e;
 
         border-top: 1px solid #B3B3B3;
-        color: #B3B3B3;
-        font-size: 12px;
-        font-weight: 300;
+        
+      color: #B3B3B3;
+      font-size: 12px;
+      font-weight: 300;
 
   }
   input {
       grid-column: input-s/input-e;
 
-        border: none;
-        font-size: 15px;
-        text-align: center;
+      border: none;
+      font-size: 15px;
+      text-align: center;
     
-        // width: 190px;
-        // height: 40px;
+        padding: 4px 0;
+        border-bottom: 1px solid #B3B3B3;
+        margin-bottom: 1px;
+        transition: all .3s ease;
+
+        &:focus {
+            outline: none;
+            border-bottom: 1px solid rgb(0, 255, 247);
+   
+        }
+      // width: 190px;
+      // height: 40px;
   }
   &__number {
       grid-column: number-s/number-e;
 
-        background-color: #00CB79;
-        color: white;
-        font-size: 20px;
-        line-height: 24px;
-        padding-top: 1px;
+      background-color: #00CB79;
+      color: white;
+      font-size: 20px;
+      line-height: 24px;
+      padding-top: 1px;
 
-        border-radius: 50%;
+        height: 26px;
+        width: 26px;
+      border-radius: 50%;
   }
-}
+} 
